<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Qarmall</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="todo">TODO</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="price_details">PRICE DETAILS</string>
    <string name="price_2_items">Price (2 items)</string>
    <string name="delivery">Delivery</string>
    <string name="ksh_4650">Ksh 4650</string>
    <string name="free">free</string>
    <string name="ksh_7689">Ksh 7689</string>
    <string name="you_saved_ksh_1100_on_this_order">You Saved Ksh.1100 on this order</string>
    <string name="home">Home</string>
    <string name="sign_out">Sign Out</string>
    <string name="ksh_4850">ksh 4850</string>
    <string name="total_amount">Total Amount</string>
    <string name="continue2">CONTINUE</string>
    <string name="part_number_53540_sda_003_53540sda003">Part Number: 53540-SDA-003 / 53540SDA003</string>
    <string name="lt_lt_go_back"><![CDATA[< <Go back]]></string>
    <string name="reset_password">reset password</string>
    <string name="recovery_email_sent_successfully_check_your_inbox">Recovery email sent successfully! Check Your Inbox</string>
    <string name="enter_your_email_id">Enter Your Email Id</string>
    <string name="we_just_need_your_registered_email_id_to_send_you_password_reset_instructions">We just need your registered Email id to send you password reset instructions</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="trending">Trending</string>
    <string name="honda_accord_steering_tie_rod_end">Honda Accord Steering Tie Rod End</string>
    <string name="ksh4_500">Ksh4,500</string>
    <string name="ksh3_830">KSh3,830</string>
    <string name="deals_of_the_day">Deals of the Day</string>
    <string name="view_all">View all</string>
    <string name="my_address">My Address</string>
    <string name="view_all2">View All</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="delivered_on_friday_28th_aug_2020">Delivered on Friday, 28th Aug 2020</string>
    <string name="your_order_has_been_delivered">Your order has been delivered</string>
    <string name="delivered">Delivered</string>
    <string name="ordered">Ordered</string>
    <string name="qty_1">Qty: 1</string>
    <string name="your_order_has_been_placed">Your order has been placed</string>
    <string name="packed">Packed</string>
    <string name="fri_28th_aug_2020_1_54_p_m">Fri, 28th Aug 2020 -1.54 P.M.</string>
    <string name="your_order_has_been_packed">Your order has been packed</string>
    <string name="shipping">Shipping</string>
    <string name="fri_29th_aug_2020_1_54_p_m">Fri, 29th Aug 2020 -1.54 P.M.</string>
    <string name="your_order_has_been_shipped">Your order has been shipped</string>
    <string name="honda_accord">Honda Accord</string>
    <string name="ksh_3950">Ksh 3950</string>
    <string name="your_order_is_being_shipped">YOUR ORDER IS BEING SHIPPED</string>
    <string name="your_current_order_status">Your Current Order Status</string>
    <string name="product_details">Product Details</string>
    <string name="dfuh3rfuyrffhrtiutgnjhieefufiukdiduieheuueuehee_ehehe_ehe_ehe_ehe_ehwmeed_dhc_c_dud_ufnf">dfuh3rfuyrffhrtiutgnjhieefufiukdiduieheuueuehee ehehe ehe ehe ehe ehwmeed dhc c dud ufnf</string>
    <string name="ksh4_5002">KSh4,500</string>
    <string name="ksh3_8301">KSh3,830</string>
    <string name="total_ratings">total ratings</string>
    <string name="_4_5">4.5</string>
    <string name="_53540_sda_003_53540sda003">53540-SDA-003 /53540SDA003</string>
    <string name="part_number">Part Number:</string>
    <string name="product_title">Product Title</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="description">Description</string>
    <string name="specification">SPECIFICATION</string>
    <string name="other_details">Other Details</string>
    <string name="davi12345678d_gmail_com">davi12345678d@gmail.com</string>
    <string name="shipping_details">SHIPPING DETAILS</string>
    <string name="david_m">David M</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_recent_orders">Your recent orders</string>
    <string name="cut">4950</string>
    <string name="login_email">Email</string>
    <string name="login_enter_your_email_id">Enter your Email Id</string>
    <string name="login_enter_password">Enter Password</string>
    <string name="login_password">Password</string>
    <string name="l_don_t_have_an_account_sign_up">Don\'t have an account? Sign Up!</string>
    <string name="login_btn_txt">LOGIN</string>
    <string name="remember_me_txt">Remember me</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="not_signed_in">Not Signed In</string>
    <string name="r_email">Email</string>
    <string name="r_enter_email">Enter Email</string>
    <string name="r_phoneNumber">PhoneNumber</string>
    <string name="r_enter_phone_number">Enter phone number</string>
    <string name="r_username">Username</string>
    <string name="register_username">username</string>
    <string name="password_r">password</string>
    <string name="enter_password_register">Enter password</string>
    <string name="retype_password">Retype password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="r_already_have_an_account_sign_in">Already have an account? Sign In!</string>
    <string name="r_sign_up">SIGN UP</string>
    <string name="m_cart">cart</string>
    <string name="m_notification">notification</string>
    <string name="m_search">search</string>
    <string name="s_search">search</string>
    <string name="c_cart">cart</string>
    <string name="search2">search</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="logout">logout</string>
</resources>
