<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_search_icon"
        android:icon="@drawable/search"
        android:orderInCategory="100"
        android:title="@string/m_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/main_notification_icon"
        android:icon="@drawable/notification"
        android:orderInCategory="100"
        android:title="@string/m_notification"
        app:showAsAction="always" />
    <item
        android:id="@+id/main_cart_icon"
        android:icon="@drawable/cart"
        android:orderInCategory="100"
        android:title="@string/m_cart"
        app:showAsAction="ifRoom" />
</menu>