<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ResetPasswordFragment"
    tools:ignore="ContentDescription">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/lock"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@color/Transparent"
            android:backgroundTint="@color/Transparent"
            android:src="@drawable/lock" />


        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lock"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/we_just_need_your_registered_email_id_to_send_you_password_reset_instructions"
            android:textColor="#FF6600"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/reset_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:hint="@string/enter_your_email_id"
            android:inputType="textEmailAddress"
            android:theme="@style/BlueProgressBar" />

        <LinearLayout
            android:id="@+id/ln1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reset_email"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/forgotPasswordEmailIcon"
                android:layout_width="20dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:src="@drawable/red_email"
                android:visibility="gone" />

            <TextView
                android:id="@+id/forgotPasswordEmailIconText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/recovery_email_sent_successfully_check_your_inbox"
                android:textColor="#11A10C"
                android:visibility="gone" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/reset_loading_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ln1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:theme="@style/BlueProgressBar"
            android:visibility="gone" />

        <Button
            android:id="@+id/resetPasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reset_loading_bar"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/login_button_style"
            android:text="@string/reset_password"
            android:textColor="#50FFFFFF" />

        <TextView
            android:id="@+id/reset_exit_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/lt_lt_go_back"
            android:textColor="@color/colorPrimaryDark" />


    </RelativeLayout>
</FrameLayout>